# Sentry2-pzstudio

./: BUILD.gn  CRC计算.py  README.md  _frozen_mpy.c  hello_world.c  modled copy.c  modmath.c  modtime.c  moduos.c  modutime.c  uart_core.c  脚本下载协议.xlsx  自定义扩展开发.md
dsx_mpython/: BUILD.gn
dsx_mpython/mpy_mod_fun_2022_5_30_v2/: assert.c  modled.c  modnetwork.c  network_ppp.c
extmod/: machine_bitstream.c  machine_mem.c  machine_signal.c  modonewire.c  moduhashlib.c  modurandom.c  modure.c  moduselect.c  moduzlib.c  network_cyw43.c  uos_dupterm.c  utime_mphal.c  vfs_fat_diskio.c  vfs_lfs.c  vfs_lfsx_file.c  vfs_posix_file.c
extmod/btstack/: btstack_hci_uart.c  modbluetooth_btstack.c
extmod/nimble/: modbluetooth_nimble.c
hal_device/: hal_pz_spi.h  hal_pz_uart.c
include/: mpconfigport.h  mphalport.h
libm_port/: BUILD.gn
mp_model/: mpthreadport.c
mp_model/device/: device_beep.h  device_led.c  device_led.h  device_motor.c  device_oled.c  device_servo.c  device_th_sensor.c  device_us516p6.c  moddevice.c
mp_model/ext_device/: extdev_dht11_22.c  extdev_dht11_22.h  extdev_ttp229.c  extdev_ultrasonic.c  extdev_ultrasonic.h  mod_extdevice.c
mp_model/machine/: machine_adc.c  machine_i2c.c  machine_pwm.c  machine_rtc.c  machine_touchpad.c  machine_wdt.c  modmachine.c
mpy_mod_fun_2022_5_30_v2/: BUILD.gn  _frozen_mpy.c  app_demo_uart.c  assert.c  gccollect.c  main.c  modfile.c  modled.c  modmath.c  modnetwork.c  modnetwork.h  modsocket.c  modtime.c  moduos.c  mphalport.c  mpnimbleport.c  network_lan.c  uart_core.c
mpy_mod_fun_2022_5_30_v2/extmod/: extmod.mk  machine_pinbase.c  machine_pulse.c  machine_spi.c  modbtree.c  modubinascii.c  modujson.c  moduselect.c  modussl_axtls.c  modussl_mbedtls.c  modwebrepl.c  vfs_posix.c  vfs_reader.c
mpy_mod_fun_2022_5_30_v2/extmod/axtls-include/: config.h
mpy_mod_fun_2022_5_30_v2/extmod/btstack/: btstack.mk  btstack_config.h
mpy_mod_fun_2022_5_30_v2/extmod/nimble/: nimble.mk
mpy_mod_fun_2022_5_30_v2/extmod/nimble/hal/: hal_uart.c
mpy_mod_fun_2022_5_30_v2/extmod/nimble/syscfg/: syscfg.h
mpy_mod_fun_2022_5_30_v2/extmod/webrepl/: webrepl.py  webrepl_setup.py  websocket_helper.py
mpy_mod_fun_2022_5_30_v2/genhdr/: mpversion.h  qstrdefs.generated.h
mpy_mod_fun_2022_5_30_v2/hal_device/: hal_pz_i2c.c  hal_pz_i2c.h  hal_pz_spi.c  hal_pz_spi.h  hal_pz_uart.c  hal_pz_uart.h
mpy_mod_fun_2022_5_30_v2/include/: app_demo_uart.h  ffconf.h  lite_sensor.h  modmachine.h  mpconfigport.h  net_common.h  net_demo.h  net_params.h  wifi_connecter.h
mpy_mod_fun_2022_5_30_v2/libm_port/: __cos.c  __rem_pio2.c  __rem_pio2_large.c  __sin.c  __tan.c  atan2.c  cos.c  libm.h  sin.c
mpy_mod_fun_2022_5_30_v2/mp_model/: mpthreadport.c  mpthreadport.h
mpy_mod_fun_2022_5_30_v2/mp_model/device/: device_beep.c  device_beep.h  device_btn.c  device_btn.h  device_icm.c  device_icm.h  device_led.c  device_led.h  device_matrix.c  device_matrix.h  device_mic.c  device_motor.c  device_motor.h  device_oled.c  device_oled.h  device_photosensitive.c  device_servo.c  device_servo.h  device_th_sensor.c  device_th_sensor.h  device_touch_pad.c  device_us516p6.c  moddevice.c  moddevice.h
mpy_mod_fun_2022_5_30_v2/mp_model/ext_device/: extdev_dht11_22.c  extdev_dht11_22.h  extdev_pm2_5.c  extdev_ttp229.c  extdev_ttp229.h  extdev_ultrasonic.c  extdev_ultrasonic.h  mod_Sentry.c  mod_Sentry.h  mod_extdevice.c  mod_extdevice.h
mpy_mod_fun_2022_5_30_v2/mp_model/machine/: machine_adc.c  machine_bitstream.c  machine_dac.c  machine_hw_spi.c  machine_i2c.c  machine_i2c.h  machine_i2s.c  machine_pin.c  machine_pwm.c  machine_rtc.c  machine_rtc.h  machine_sdcard.c  machine_timer.c  machine_touchpad.c  machine_uart.c  machine_uart.h  machine_wdt.c  modmachine.c  modmachine.h
mpy_mod_fun_2022_5_30_v2/poly_dev/common/: aht2x.c  aht2x.h  beep.c  beep.h  decode.c  decode.h  file_reader.c  file_reader.h  music_play.c  music_play.h  parse_pin.c  parse_pin.h
mpy_mod_fun_2022_5_30_v2/poly_dev/dashixiong/: encode_convert.c  encode_convert.h  gb2312_font.c  gb2312_font.h  gbkTables.h  icm.c  icm.h  oled_ssd1306.c  oled_ssd1306.h  oled_ssd1306_conf.h  oled_ssd1306_fonts.c  oled_ssd1306_fonts.h  unicodeTables.h
mpy_mod_fun_2022_5_30_v2/poly_dev/tianqi/: matrixscreen.c  matrixscreen.h  sc7a20.c  sc7a20.h
mpy_mod_fun_2022_5_30_v2/polygon/: frame.c  frame.h  hw_ctrl.c  hw_ctrl.h  mycrc16.c  mycrc16.h  polygon_list.h  polygon_sys_cfg.c  polygon_sys_cfg.h  pz_online.c  pz_online.h  pz_queue.c  pz_queue.h  sys_debug.c  sys_debug.h  sys_debug_uart.c  sys_debug_uart.h
mpy_mod_fun_2022_5_30_v2/py/: asmx86.c  dynruntime.mk  emitbc.c  emitnx86.c  makecompresseddata.py  makemoduledefs.py  makeqstrdata.py  makeqstrdefs.py  makeversionhdr.py  mkenv.mk  mkrules.mk  modmath.c  objboundmeth.c  objclosure.c  objcomplex.c  objdict.c  objint_mpz.c  objslice.c  objstr.c  objstrunicode.c  objtuple.c  objzip.c  py.mk  qstrdefs.h  reader.c  repl.c  runtime.c  vstr.c
mpy_mod_fun_2022_5_30_v2/shared/memzip/: make-memzip.py  memzip.c  memzip.h
mpy_mod_fun_2022_5_30_v2/shared/runtime/: pyexec.c
openbrotherForPZstudio/: dsx.json  dsx.py  dsxblocks.js
openbrotherForPZstudio/api/: index.html
poly_dev/common/: aht2x.h  beep.c  beep.h  file_reader.h  parse_pin.c
poly_dev/dashixiong/: encode_convert.c  encode_convert.h  gb2312_font.h  icm.c  oled_ssd1306.c  oled_ssd1306.h  unicodeTables.h
poly_dev/tianqi/: sc7a20.c
polygon/: frame.h  mycrc16.c  mycrc16.h  polygon_list.h  polygon_sys_cfg.c  polygon_sys_cfg.h  pz_online.c  sys_debug_uart.c  sys_debug_uart.h
py/: CMakeLists.txt  argcheck.c  asmarm.c  asmthumb.c  asmx64.c  bc.c  builtin.h  builtinevex.c  builtinimport.c  compile.c  emitglue.c  emitnative.c  emitnx86.c  gc.c  malloc.c  map.c  modarray.c  modcmath.c  modcollections.c  modgc.c  modio.c  modmicropython.c  modstruct.c  modsys.c  moduerrno.c  mpprint.c  mpthread.h  mpz.c  nativeglue.c  obj.c  objattrtuple.c  objbool.c  objcell.c  objenumerate.c  objexcept.c  objfilter.c  objfloat.c  objgenerator.c  objgetitemiter.c  objint.c  (+19 more)
shared/libc/: printf.c
shared/memzip/: import.c
(+85 files in other folders)
