
static_library("lib_mp") {
    sources = [
        "assert.c",
        "main.c",
        "uart_core.c",
        "_frozen_mpy.c",
        "moduos.c",
        "modfile.c",
        "modtime.c",
        "modnetwork.c",
        "modsocket.c",
        "py/argcheck.c",
        "py/bc.c",
        "py/binary.c",
        "py/builtinimport.c",
        "py/builtinevex.c",
        "py/compile.c",
        "py/frozenmod.c",
        "py/runtime.c",
        "py/gc.c",
        "py/repl.c",
        "py/qstr.c",
        "py/emitbc.c",
        "py/emitcommon.c",
        "py/emitglue.c",
        "py/lexer.c",
        "py/map.c",
        "py/mpstate.c",
        "py/modbuiltins.c",
        "py/modmicropython.c",
        "py/mpprint.c",
        "py/modthread.c",
        "py/modsys.c",
        "py/obj.c",
        "py/objbool.c",
        "py/objcell.c",
        "py/objnone.c",
        "py/objmodule.c",
        "py/objobject.c",
        "py/objrange.c",
        "py/objzip.c",
        "py/objdict.c",
        "py/objclosure.c",
        "py/objpolyiter.c",
        "py/objtype.c",
        "py/objtuple.c",
        "py/objarray.c",
        "py/objattrtuple.c",
        "py/objfun.c",
        "py/objmap.c",
        "py/objint.c",
        "py/objlist.c",
        "py/objgenerator.c",
        "py/objgetitemiter.c",
        "py/objboundmeth.c",
        "py/objstr.c",
        "py/objstringio.c",
        "py/objexcept.c",
        "py/objsingleton.c",
        "py/runtime_utils.c",
        "py/modgc.c",
        "py/modio.c",
        "py/modarray.c",
        "py/modmath.c",
        "py/parsenum.c",
        "py/parsenumbase.c",
        "py/reader.c",
        "py/sequence.c",
        "py/scope.c",
        "py/smallint.c",
        "py/scheduler.c",
        "py/stream.c",
        "py/stackctrl.c",
        "py/unicode.c",
        "py/opmethods.c",
        "py/parse.c",
        "py/nlrsetjmp.c",
        "py/nlr.c",
        "py/nativeglue.c",
        "py/malloc.c",
        "py/emitinlinethumb.c",
        "py/vm.c",
        "py/vstr.c",
        "py/objfloat.c",
        "py/formatfloat.c",
        "py/objcomplex.c",
        "extmod/vfs.c",
        "extmod/modurandom.c",
        "shared/runtime/pyexec.c",
        "shared/runtime/interrupt_char.c",
        "shared/readline/readline.c",
        "shared/runtime/stdout_helpers.c",
        "shared/netutils/netutils.c",
        "polygon/hw_ctrl.c",
        "polygon/polygon_sys_cfg.c",
        "polygon/pz_online.c",
        "polygon/frame.c",
        "polygon/pz_queue.c",
        "polygon/mycrc16.c",
        "polygon/sys_debug.c",
        "polygon/sys_debug_uart.c",
        "poly_dev/common/parse_pin.c",
        "poly_dev/common/beep.c",
        "poly_dev/common/decode.c",
        "poly_dev/common/aht2x.c",
        "poly_dev/common/file_reader.c",
        "poly_dev/tianqi/sc7a20.c",
        "poly_dev/tianqi/matrixscreen.c",
        "poly_dev/dashixiong/oled_ssd1306.c",
        "poly_dev/dashixiong/oled_ssd1306_fonts.c",
        "poly_dev/dashixiong/icm.c",
        "poly_dev/dashixiong/encode_convert.c",
        "poly_dev/dashixiong/gb2312_font.c",
        "mp_model/mpthreadport.c",
        "mp_model/device/moddevice.c",
        "mp_model/device/device_us516p6.c",
        "mp_model/device/device_oled.c",
        "mp_model/device/device_icm.c",
        "mp_model/device/device_motor.c",
        "mp_model/device/device_beep.c",
        "mp_model/device/device_led.c",
        "mp_model/device/device_btn.c",
        "mp_model/device/device_servo.c",
        "mp_model/device/device_matrix.c",
        "mp_model/device/device_th_sensor.c",
        "mp_model/device/device_touch_pad.c",
        "mp_model/device/device_mic.c",
        "mp_model/device/device_photosensitive.c",
        "mp_model/ext_device/mod_extdevice.c",
        "mp_model/ext_device/extdev_ttp229.c",
        "mp_model/ext_device/extdev_ultrasonic.c",
        "mp_model/ext_device/extdev_dht11_22.c",
        "mp_model/ext_device/extdev_pm2_5.c",
        "mp_model/machine/modmachine.c",
        "mp_model/machine/machine_i2c.c",
        "mp_model/machine/machine_uart.c",
        "mp_model/machine/machine_pin.c",
        "mp_model/machine/machine_pwm.c",
        "mp_model/machine/machine_adc.c",
        "hal_device/hal_pz_uart.c",
        "hal_device/hal_pz_i2c.c",
        #"//kernel/liteos_m/kal/posix/musl_src/exit/assert.c",
    ]
    
    include_dirs = [
        "./hi3861_three_lib/include",
        "./hi3861_three_lib/include/lwip/apps",
        "///device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/mbedtls/include/mbedtls",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//utils/native/lite/include",
        "//third_party/FatFs/source",
        "//drivers/adapter/khdf/linux/osal/include",
        "//drivers/framework/include/utils",
        "//drivers/framework/include/osal",
        "//drivers/framework/include/core",
        "//drivers/framework/core/shared/include",
        "//drivers/framework/core/adapter/vnode/include",
        "//vendor/huawei/hdf/sample/platform/uart/dispatch",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/boot/flashboot/include",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/boot/commonboot",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/mbedtls/include/mbedtls",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/platform/drivers/uart",
        "//kernel/liteos_m/kal/posix/musl_src/exit",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/drivers/wifi/driver/hi3881/include",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//utils/native/lite/include",
        "//kernel/liteos_m/kernel/arch/include",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/drivers/uart",
        "./include",
        "./polygon",
        "./poly_dev/common",
        "./poly_dev/common/ext_dev",
        "./poly_dev/tianqi",
        "./poly_dev/dashixiong",
        "./mp_model/device",
        "./mp_model/ext_device",
        "./mp_model/machine",
        "./mp_model",
        "./hal_device",
        "./",
    ]
}
